# latex-lint

./: LICENSE  README.md  pyproject.toml
src/latex_lint/: __init__.py  check_latex.py  main.py
