[project]
name = "latex-lint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Philipp", email = "aphilipp@liva-pms.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
latex-lint = "latex_lint:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
